Partial fix of tests compilation.